# tree-sitter-clean

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-clean.pc.in
bindings/c/tree_sitter/: tree-sitter-clean.h
bindings/go/: binding.go
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_clean/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
editor/: README.md  helix-languages.toml  zed-extension.toml
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  comprehensions.txt  records.txt  types.txt
